syntax = "proto3";

package bilibili.app.view.v1;

option java_outer_classname = "ViewUgcOuterClass";

import "bilibili/app/view/v1/section.proto";

//
enum SeasonType {
  Unknown = 0; //
  Base    = 1; //
  Good    = 2; //
}

// UGC视频合集信息
message UgcSeason {
  // 合集id
  int64 id = 1;
  // 合集标题
  string title = 2;
  // 合集封面url
  string cover = 3;
  // 合集简介
  string intro = 4;
  // 小节列表
  repeated Section sections = 5;
  // 合集状态数
  UgcSeasonStat stat = 6;
  // 标签字色
  string label_text = 7;
  // 标签背景色
  string label_text_color = 8;
  // 标签夜间字色
  string label_bg_color = 9;
  // 标签夜间背景色
  string label_text_night_color = 10;
  // 右侧描述文案
  string label_bg_night_color = 11;
  // 按钮文案
  string descRight = 12;
  // 分集总数
  int64 ep_count = 13;
  // 合集类型
  SeasonType season_type = 14;
  //
  bool show_continual_button = 15;
  //
  int64 ep_num = 16;
  //
  bool season_pay = 17;
  //
  GoodsInfo goods_info = 18;
  //
  ButtonStyle pay_button = 19;
  //
  string label_text_new = 20;
  //
//  UgcSeasonActivity activity = 21;
  //
  repeated string season_ability = 22;
}

//
message ButtonStyle {
  //
  string text = 1;
  //
  string text_color = 2;
  //
  string text_color_night = 3;
  //
  string bg_color = 4;
  //
  string bg_color_night = 5;
  //
  string jump_link = 6;
}


// ugc视频合集状态数
message UgcSeasonStat {
  // 合集id
  int64 season_id = 1;
  // 观看数
  int32 view = 2;
  // 弹幕数
  int32 danmaku = 3;
  // 评论数
  int32 reply = 4;
  // 收藏数
  int32 fav = 5;
  // 投币数
  int32 coin = 6;
  // 分享数
  int32 share = 7;
  // 当前排名
  int32 now_rank = 8;
  // 历史最高排名
  int32 his_rank = 9;
  // 总计点赞
  int32 like = 10;
}

//
message GoodsInfo {
  //
  string goods_id = 1;
  //
  int32 category = 2;
  //
  int64 goods_price = 3;
  //
  PayState pay_state = 4;
  //
  string goods_name = 5;
  //
  string price_fmt = 6;
}

//
enum PayState {
  PayStateUnknown = 0; //
  PayStateActive  = 1; //
}